Added IIO interface and MockedIO, separated MockedInput and MockedOutput into their own classes

--- a/TicTacToeTests/TicTacToeTests.csproj
+++ b/TicTacToeTests/TicTacToeTests.csproj
@@ -73,9 +73,11 @@
   <ItemGroup>
     <Compile Include="BoardTests.cs" />
     <Compile Include="ComputerPlayerTests.cs" />
-    <Compile Include="ConsoleIOTests.cs" />
     <Compile Include="GameTests.cs" />
     <Compile Include="HumanPlayerTests.cs" />
+    <Compile Include="MockedInput.cs" />
+    <Compile Include="MockedIO.cs" />
+    <Compile Include="MockedOutput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
