Changed solution name

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: csharp
 solution: TicTacToe.sln
 install:
-  - nuget restore TicTacToe.sln
+  - nuget restore TicTacToe.Core.sln
   - nuget install xunit.runner.console -Version 2.1.0 -OutputDirectory testrunner
 script:
-  - xbuild /p:Configuration=Release TicTacToe.sln
+  - xbuild /p:Configuration=Release TicTacToe.Core.sln
   - mono ./testrunner/xunit.runner.console.2.1.0/tools/xunit.console.exe ./TicTacToeTests/bin/Release/TicTacToeTests.dll -noappdomain
