--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: csharp
-solution: TicTacToe.sln
+solution: TicTacToe.Core.sln
 install:
   - nuget restore TicTacToe.Core.sln
   - nuget install xunit.runner.console -Version 2.1.0 -OutputDirectory testrunner
